--- a/petclinic/src/main/resources/application.properties
+++ b/petclinic/src/main/resources/application.properties
@@ -16,14 +16,7 @@
 # When using Spring Data JPA, use: spring-data-jpa
 # ------------------------------------------------
 
-spring.profiles.active=mysql,jpa
-spring.datasource.url = jdbc:mysql://localhost:3306/petclinic?useUnicode=true
-spring.datasource.username=pc
-spring.datasource.password=petclinic
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.database=MYSQL
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.profiles.active=hsqldb,jpa
 
 # ------------------------------------------------
 
